Stereo camera selection bug #45018

Closed
opened 2015-06-10 16:27:44 +02:00 by Ejner Fergo · 11 comments

System Information
Linux 64bit + Nvidia 346.72

Blender Version
Broken: testbuild1 (148ed4e)

Short description of error
With multiview enabled and in camera view, can't select camera when clicking the right side.

Exact steps for others to reproduce the error

  1. Enable multiview and enter camera view
  2. Try selecting the camera by clicking its border. Left side is fine, right side doesn't select.

stereocam_select.png
stereocam_select.blend

**System Information** Linux 64bit + Nvidia 346.72 **Blender Version** Broken: testbuild1 (148ed4e) **Short description of error** With multiview enabled and in camera view, can't select camera when clicking the right side. **Exact steps for others to reproduce the error** 1) Enable multiview and enter camera view 2) Try selecting the camera by clicking its border. Left side is fine, right side doesn't select. ![stereocam_select.png](https://archive.blender.org/developer/F188967/stereocam_select.png) [stereocam_select.blend](https://archive.blender.org/developer/F188969/stereocam_select.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @EjnerFergo

Added subscriber: @EjnerFergo

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm that, in fact it seems to affect all object, have same issue with the cube (clicking in rightmost 'blue' part does not allow for selection either).

Can confirm that, in fact it seems to affect all object, have same issue with the cube (clicking in rightmost 'blue' part does not allow for selection either).
Dalai Felinto was assigned by Bastien Montagne 2015-06-10 17:04:33 +02:00

Added subscriber: @DBrown

Added subscriber: @DBrown

Having the same issue with Windows 64x build.

EDIT: Seems to have the same issue with the Stereo 3D camera frame as well.

Having the same issue with Windows 64x build. EDIT: Seems to have the same issue with the Stereo 3D camera frame as well.

This issue was referenced by efe4af8fcb

This issue was referenced by efe4af8fcbf9987dd1563a2f49ce606d3c14d808

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Generally which view is used for selection is ambivalent, there's no correct choice, but users should at least be able to select the frame they see. Fixed that now.

Generally which view is used for selection is ambivalent, there's no correct choice, but users should at least be able to select the frame they see. Fixed that now.

This issue was referenced by 98e2ddda71

This issue was referenced by 98e2ddda719e32af697e424360856e657b6dd662
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45018
No description provided.