Fix T45018 camera not easily selectable in multiview.

Generally for scene choosing a view to use for selection is not
straightforward, but camera should at least be easily selectable.